--- a/ch1/ch1/package.json
+++ b/ch1/ch1/package.json
@@ -7,16 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src",
-    "preview": "vite preview",
-    "prepare": "husky install"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
@@ -26,15 +23,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.1.0",
     "prettier": "^3.1.0",
     "vite": "^5.0.0"
-  },
-  "lint-staged": {
-    "**/*.{js,jsx}": [
-      "npx prettier --Write",
-      "npx eslint --fix"
-    ]
   }
 }
